# Poetry configs
[tool.poetry]
name = "form_poc"
version = "0.1.0"
description = ""
authors = ["Fátima Rosa <fatimamargarida_santos@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7"
streamlit = "^1.42.2"
folium = "^0.19.4"
ipyleaflet = "^0.19.2"
plotly = "^6.0.0"
pydeck = "^0.9.1"
streamlit-folium = "^0.24.0"
clipboard = "^0.0.4"
streamlit-js-eval = "^0.1.7"
leafmap = "^0.42.13"
geopandas = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Ruff configs
[tool.ruff.lint]
select = ['E', 'F', 'A', 'PLC', 'PLE', 'PLW', 'I']

[tool.ruff]
line-length = 120

# Vulture configs
[tool.vulture]
min_confidence = 80
paths=["."]
