# Poetry configs
[tool.poetry]
name = "form_poc"
version = "0.1.0"
description = ""
authors = ["Fátima Rosa <fatimamargarida_santos@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7"
streamlit = "^1.42.2"
folium = "^0.19.4"
plotly = "^6.0.0"
streamlit-folium = "^0.24.0"
pydrive2 = "^1.21.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

# Ruff configs
[tool.ruff.lint]
select = ['E', 'F', 'A', 'PLC', 'PLE', 'PLW', 'I']

[tool.ruff]
line-length = 120

# Vulture configs
[tool.vulture]
min_confidence = 80
paths=["."]
